--- a/Goals/Base.lproj/LaunchScreen.storyboard
+++ b/Goals/Base.lproj/LaunchScreen.storyboard
@@ -25,7 +25,7 @@
                                 <rect key="frame" x="87.5" y="233" width="200" height="200"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.96078431372549022" green="0.65098039215686276" blue="0.13725490196078433" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="1" green="0.15686274509803921" blue="0.14509803921568626" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="gtC-d2-R6d" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Z6n-2D-67v"/>
                             <constraint firstItem="gtC-d2-R6d" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="kXK-2U-Cfi"/>
